--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,16 +1,48 @@
 upstream activities {
-	server	unix:///tmp/activities.sock;
+	server	unix:/tmp/activities.sock;
+}
+
+upstream daphne {
+	server unix:/tmp/daphne.sock;
 }
 
 server {
-	listen		80;
-	server_name	www.aktivitäten.org aktivitäten.org;
+	listen 80;
+	listen [::]:80;
+	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net;
+	return 301 https://myactivities.net$request_uri;
+}
 
-	access_log	off;
+server {
+	listen 443 ssl;
+	ssl_certificate		/home/projects/activities/ssl/activities.crt;
+	ssl_certificate_key	/home/projects/activities/ssl/activities.key;
+	server_name myactivities.net wwww.myactivities.net;
+
+	access_log	on;
 	error_log 	/home/projects/activities/logs/nginx_error.log;
 	
+	client_max_body_size	30M;	
+
 	location / {
 		include		/etc/nginx/uwsgi_params;
 		uwsgi_pass	activities;
+	}
+	
+	location /static/ {
+		alias /home/projects/activities/static/;
+	}
+	
+	location /media/ {
+		alias /home/projects/activities/media/;
+	}
+	
+	location /ws/ {
+		proxy_http_version 	1.1;
+		proxy_set_header	Upgrade $http_upgrade;
+		proxy_set_header	Connection "upgrade";
+		proxy_redirect		off;
+		
+		proxy_pass		http://daphne;
 	}
 }
