--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -1,11 +1,11 @@
 [uwsgi]
 projectname = activities
-base = /home/yannik/Documents/Development/django_projects/activities
+base = /home/projects/activities
 
 master = true
 pythonpath = %(base)
 chdir =  %(base)
-env = DJANGO_SETTINGS_MODULE=%(projectname).settings.local_linux
+env = DJANGO_SETTINGS_MODULE=%(projectname).settings.pro
 module = %(projectname).wsgi:application
 socket = /tmp/%(projectname).sock
 chmod-socket = 666
