--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,7 +9,7 @@ upstream daphne {
 server {
 	listen 80;
 	listen [::]:80;
-	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net;
+	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 	return 301 https://myactivities.net$request_uri;
 }
 
@@ -17,7 +17,7 @@ server {
 	listen 443 ssl;
 	ssl_certificate		/home/projects/activities/ssl/activities.crt;
 	ssl_certificate_key	/home/projects/activities/ssl/activities.key;
-	server_name myactivities.net wwww.myactivities.net;
+	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 
 	access_log	on;
 	error_log 	/home/projects/activities/logs/nginx_error.log;
