--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,8 +8,14 @@ upstream daphne {
 
 server {
 	listen 80;
+	server_name de.myactivities.net;
+	return 301 https://de.myactivities.net;
+}
+
+server {
+	listen 80;
 	listen [::]:80;
-	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
+	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net en.myactivities.net;
 	return 301 https://myactivities.net$request_uri;
 }
 
