--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.3.0
+asgiref~=3.2.10
 asn1crypto==0.24.0
 attrs==20.2.0
 autobahn==20.7.1
@@ -44,3 +44,4 @@ zope.interface==5.1.2
 
 asgiref~=3.2.10
 django-parler~=2.2
+django-model-utils~=4.1.1
