--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,135 @@
-asgiref~=3.2.10
+aioredis==1.3.1
+apt-clone==0.2.1
+apturl==0.5.2
+asgiref==3.3.1
 asn1crypto==0.24.0
+astroid==2.4.2
+async-timeout==3.0.1
 attrs==20.2.0
 autobahn==20.7.1
 Automat==20.2.0
+beautifulsoup4==4.8.2
+blinker==1.4
+Brlapi==0.7.0
+certifi==2019.11.28
 cffi==1.14.3
-channels~=2.4.0
+channels==3.0.3
+channels-redis==3.2.0
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
 constantly==15.1.0
 cryptography==3.2.1
-daphne==3.0.0
-Django~=3.1
+cupshelpers==1.0
+daphne==3.0.1
+dbus-python==1.2.16
+defer==1.0.6
+distro==1.4.0
+Django==3.1.5
 django-extensions==3.0.9
+django-model-utils==4.1.1
+django-parler==2.2
+django-redis==4.12.1
+easy-thumbnails==2.7.1
+entrypoints==0.3
 geographiclib==1.50
 geopy==2.0.0
+grpcio==1.16.1
+hiredis==1.1.0
+httplib2==0.14.0
 hyperlink==20.0.1
 idna==2.6
+ifaddr==0.1.6
+IMDbPY==6.8
 importlib-metadata==2.0.0
 incremental==17.5.0
+isort==5.7.0
 keyring==10.6.0
 keyrings.alt==3.0
-Markdown~=3.2.2
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.3
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.2.2
+MarkupSafe==1.1.0
+mccabe==0.6.1
+msgpack==1.0.2
+msgpack-python==0.5.6
+nemo-emblems==4.8.1
+netifaces==0.10.4
+nose==1.3.7
+oauthlib==3.1.0
+onboard==1.4.1
+packaging==20.3
+PAM==0.4.2
+pexpect==4.6.0
 Pillow==8.0.1
+protobuf==3.6.1
+psutil==5.5.1
 psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycairo==1.16.2
 pycparser==2.20
 pycrypto==2.6.1
-pygobject==3.26.1
+pycups==1.9.73
+pycurl==7.43.0.2
+PyGObject==3.36.0
 PyHamcrest==2.0.2
+PyICU==2.4.2
+pyinotify==0.9.6
+PyJWT==1.7.1
+pylint==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
 pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pyparted==3.11.2
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.3
+python-debian===0.1.36ubuntu1
 python-magic==0.4.18
+python-xapp==2.0.2
+python-xlib==0.23
 pytz==2020.4
 pyxdg==0.25
+PyYAML==5.3.1
 redis==3.5.3
+redis-lock==0.2.0
+reportlab==3.5.34
+requests==2.22.0
+requests-file==1.4.3
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
 service-identity==18.1.0
-six==1.11.0
+setproctitle==1.1.10
+simplejson==3.16.0
+six==1.15.0
+soupsieve==1.9.5
 sqlparse==0.4.1
+systemd-python==234
+tinycss2==1.0.2
+tldextract==2.2.1
+toml==0.10.2
 Twisted==20.3.0
 txaio==20.4.1
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+Unidecode==1.1.1
+urllib3==1.25.8
 uWSGI==2.0.19.1
+wadllib==1.3.3
+webencodings==0.5.1
+wrapt==1.12.1
+xkit==0.0.0
+zeroconf==0.24.4
 zipp==3.4.0
 zope.interface==5.1.2
-
-asgiref~=3.2.10
-django-parler~=2.2
-django-model-utils~=4.1.1
