--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+#redis, postgresql, libpq-dev, python3-pip, python3
 aioredis==1.3.1
 apt-clone==0.2.1
 apturl==0.5.2
@@ -100,13 +101,12 @@ pytz==2020.4
 pyxdg==0.25
 PyYAML==5.3.1
 redis==3.5.3
-redis-lock==0.2.0
+python-redis-lock==3.7.0
 reportlab==3.5.34
 requests==2.22.0
 requests-file==1.4.3
 requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
-screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
 service-identity==18.1.0
 setproctitle==1.1.10
