--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,22 +7,50 @@ upstream daphne {
 }
 
 server {
+    if ($host = de.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
 	listen 80;
 	server_name de.myactivities.net;
 	return 301 https://de.myactivities.net;
+
+
 }
 
 server {
+    if ($host = www.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = en.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
 	listen 80;
 	listen [::]:80;
 	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net en.myactivities.net;
 	return 301 https://myactivities.net$request_uri;
+
+
+
+
+
+
 }
 
 server {
 	listen 443 ssl;
-	ssl_certificate		/home/projects/activities/ssl/activities.crt;
-	ssl_certificate_key	/home/projects/activities/ssl/activities.key;
+    ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 
 	access_log	on;
@@ -51,4 +79,8 @@ server {
 		
 		proxy_pass		http://daphne;
 	}
+
+
+
+
 }
