--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -9,3 +9,8 @@ env = DJANGO_SETTINGS_MODULE=%(projectname).settings.pro
 module = %(projectname).wsgi:application
 socket = /tmp/%(projectname).sock
 chmod-socket = 666
+enable-threads = true
+single-interpreter = true
+processes = 8
+threads = 2
+single-interpreter = true
