--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 #redis, postgresql, libpq-dev, python3-pip, python3
+#turnserver, download wget http://turnserver.open-sys.org/downloads/v4.5.2/turnserver-4.5.2.tar.gz, apt-get install libssl-dev libevent-dev libhiredis-dev make -y, make, make install, run turnserver, see https://stackoverflow.com/questions/31161864/how-to-create-stun-turn-server-instance-using-aws-ec2/32113146#32113146
 aioredis==1.3.1
 apt-clone==0.2.1
 apturl==0.5.2
