--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,5 @@
+#limit_conn_zone $binary_remote_addr zone=addr:10m;
+
 upstream activities {
 	server	unix:/tmp/activities.sock;
 }
@@ -70,7 +72,7 @@ server {
 		proxy_set_header	Upgrade $http_upgrade;
 		proxy_set_header	Connection "upgrade";
 		proxy_redirect		off;
-		
+		#limit_conn addr 10;
 		proxy_pass		http://daphne;
 	}
 }
