--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -13,3 +13,7 @@ enable-threads = true
 single-interpreter = true
 processes = 8
 threads = 2
+stats = 127.0.0.1:9191
+harakiri = 30
+uid = 1001
+gid = 1001
