--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -39,7 +39,7 @@ server {
 
 	listen 80;
 	listen [::]:80;
-	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net en.myactivities.net www.de.myactivities.net www.en.myactivities.net;
+	server_name h2910280.stratoserver.net www.h2910280.stratoserver.net 85.214.133.194 myactivities.net www.myactivities.net en.myactivities.net de.myactivities.net;
 	return 301 https://myactivities.net$request_uri;
 }
 
@@ -47,7 +47,7 @@ server {
 	listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
-	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net www.en.myactivities.net www.de.myactivities.net;
+	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 
 	access_log	on;
 	error_log 	/home/projects/activities/logs/nginx_error.log;
