--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -23,12 +23,18 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-
+	if ($host = 85.214.133.194) {
+		return 400;
+	}
+	
 	listen 80;
-	listen [::]:80;
 }
 
 server {
+	if ($host = 85.214.133.194) {
+		return 400;
+	}
+	
 	listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
