--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -22,19 +22,11 @@ server {
     if ($host = myactivities.net) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
-
-	if ($host = 85.214.133.194) {
-		return 400;
-	}
 	
 	listen 80;
 }
 
 server {
-	if ($host = 85.214.133.194) {
-		return 400;
-	}
-	
 	listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
@@ -65,4 +57,16 @@ server {
 		proxy_redirect		off;
 		proxy_pass		http://daphne;
 	}
+}
+
+server {
+	listen 80;
+	server_name 85.214.133.194;
+	return 400;
+}
+
+server {
+	listen 443 ssl;
+	server_name 85.214.133.194;
+	return 400;
 }
