--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -23,6 +23,7 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 	
+	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 	listen 80;
 }
 
