--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -18,7 +18,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 
-	access_log	on;
+	access_log	off;
 	error_log 	/home/projects/activities/logs/nginx_error.log;
 	
 	client_max_body_size	30M;	
