--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -16,4 +16,4 @@ threads = 2
 harakiri = 30
 uid = not_root
 logto = %(base)/logs/uwsgi.log
-logformat = %(ctime), %(addr): %(method) %(uri) -> %(rsize) bytes in %(msecs)ms (%(status))
+logformat = %(addr): %(method) %(uri) -> %(rsize) bytes in %(msecs)ms (%(status))
