--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -47,12 +47,12 @@ server {
 
 server {
 	listen 80;
-	server_name 85.214.133.194;
+	server_name 85.214.133.194, www.h2910280.stratoserver.neth2910280.stratoserver.net;
 	return 400;
 }
 
 server {
 	listen 443 ssl;
-	server_name 85.214.133.194;
+	server_name 85.214.133.194 www.h2910280.stratoserver.net h2910280.stratoserver.net;
 	return 400;
 }
