--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,7 +21,8 @@ server {
 	access_log	off;
 	error_log 	/home/projects/activities/logs/nginx_error.log;
 	
-	client_max_body_size	30M;	
+	client_max_body_size	30M;
+	server_names_hash_bucket_size	64;
 
 	location / {
 		include		/etc/nginx/uwsgi_params;
