--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,6 +6,10 @@ upstream daphne {
 	server unix:/tmp/daphne.sock;
 }
 
+http {
+	server_names_hash_bucket_size	64;
+}
+
 server {
 	listen 80;
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
@@ -22,7 +26,6 @@ server {
 	error_log 	/home/projects/activities/logs/nginx_error.log;
 	
 	client_max_body_size	30M;
-	server_names_hash_bucket_size	64;
 
 	location / {
 		include		/etc/nginx/uwsgi_params;
