--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -15,6 +15,35 @@ server {
 
 server {
 	listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/shop.myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/shop.myactivities.net/privkey.pem; # managed by Certbot
+	server_name shop.myactivities.net;
+
+	access_log	off;
+	error_log 	/home/projects/younibox/logs/nginx_error.log;
+
+	location / {
+		include		/etc/nginx/uwsgi_params;
+		uwsgi_pass	younibox;
+	}
+	
+	location /static/ {
+		alias /home/projects/younibox/static/;
+	}
+	
+	location /media/ {
+		alias /home/projects/younibox/media/;
+	}
+}
+
+server {
+	listen 80;
+	server_name shop.myactivities.net;
+	return 301 https://$host$request_uri;
+}
+
+server {
+	listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
