--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,6 +2,10 @@ upstream activities {
 	server	unix:/tmp/activities.sock;
 }
 
+upstream younibox {
+	server unix:/tmp/younibox.sock;
+}
+
 upstream daphne {
 	server unix:/tmp/daphne.sock;
 }
