--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,8 +2,8 @@ upstream activities {
 	server	unix:/tmp/activities.sock;
 }
 
-upstream younibox {
-	server unix:/tmp/younibox.sock;
+upstream boxdichdurchdeinstudium {
+	server unix:/tmp/boxdichdurchdeinstudium.sock;
 }
 
 upstream daphne {
@@ -19,22 +19,24 @@ server {
 
 server {
 	listen 443 ssl;
-    server_name shop.myactivities.net;
+    ssl_certificate /etc/letsencrypt/live/shop.myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/shop.myactivities.net/privkey.pem; # managed by Certbot
+	server_name shop.myactivities.net;
 
 	access_log	off;
-	error_log 	/home/projects/younibox/logs/nginx_error.log;
+	error_log 	/home/projects/boxdichdurchdeinstudium/logs/nginx_error.log;
 
 	location / {
 		include		/etc/nginx/uwsgi_params;
-		uwsgi_pass	younibox;
+		uwsgi_pass	boxdichdurchdeinstudium;
 	}
 	
 	location /static/ {
-		alias /home/projects/younibox/static/;
+		alias /home/projects/boxdichdurchdeinstudium/static/;
 	}
 	
 	location /media/ {
-		alias /home/projects/younibox/media/;
+		alias /home/projects/boxdichdurchdeinstudium/media/;
 	}
 }
 
