--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -12,9 +12,37 @@ upstream daphne {
 
 
 server {
+    if ($host = www.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = en.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = de.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
 	listen 80;
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 	return 301 https://$host$request_uri;
+
+
+
+
+
+
+
+
 }
 
 server {
@@ -36,12 +64,22 @@ server {
 	location /media/ {
 		alias /home/projects/younibox/media/;
 	}
+
+    ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 }
 
 server {
+    if ($host = shop.myactivities.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
 	listen 80;
 	server_name shop.myactivities.net;
 	return 301 https://$host$request_uri;
+
+
 }
 
 server {
@@ -75,4 +113,8 @@ server {
 		proxy_redirect		off;
 		proxy_pass		http://daphne;
 	}
+
+
+
+
 }
