--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "emmet.includeLanguages": {
+        "django-html": "html",
+    },
+
     "restoreTerminals.terminals": [
         {
           "splitTerminals": [
