--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -38,9 +38,7 @@ server {
 
 server {
 	listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/shop.myactivities.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/shop.myactivities.net/privkey.pem; # managed by Certbot
-	server_name shop.myactivities.net;
+	server_name shop.myactivities.net www.boxdichdurchdeinstudium.de boxdichdurchdeinstudium.de;
 
 	access_log	off;
 	error_log 	/home/projects/boxdichdurchdeinstudium/logs/nginx_error.log;
@@ -57,7 +55,6 @@ server {
 	location /media/ {
 		alias /home/projects/boxdichdurchdeinstudium/media/;
 	}
-
     ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 }
@@ -76,8 +73,6 @@ server {
 
 server {
 	listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 
 	access_log	off;
@@ -105,4 +100,7 @@ server {
 		proxy_redirect		off;
 		proxy_pass		http://daphne;
 	}
+
+    ssl_certificate /etc/letsencrypt/live/myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/myactivities.net/privkey.pem; # managed by Certbot
 }
