--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -60,6 +60,21 @@ server {
 }
 
 server {
+    if ($host = www.boxdichdurchdeinstudium.de) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+	if ($host = boxdichdurchdeinstudium.de) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+	listen 80;
+	server_name boxdichdurchdeinstudium.de www.boxdichdurchdeinstudium.de;
+	return 301 https://$host$request_uri;
+
+}
+
+server {
     if ($host = shop.myactivities.net) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
