--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -38,7 +38,7 @@ server {
 
 server {
 	listen 443 ssl;
-	server_name shop.myactivities.net www.boxdichdurchdeinstudium.de boxdichdurchdeinstudium.de;
+	server_name www.boxdichdurchdeinstudium.de boxdichdurchdeinstudium.de;
 
 	access_log	off;
 	error_log 	/home/projects/boxdichdurchdeinstudium/logs/nginx_error.log;
@@ -70,18 +70,6 @@ server {
 
 	listen 80;
 	server_name boxdichdurchdeinstudium.de www.boxdichdurchdeinstudium.de;
-	return 301 https://$host$request_uri;
-
-}
-
-server {
-    if ($host = shop.myactivities.net) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-	listen 80;
-	server_name shop.myactivities.net;
 	return 301 https://$host$request_uri;
 
 }
