--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -17,3 +17,4 @@ harakiri = 30
 uid = not_root
 logto = %(base)/logs/uwsgi.log
 logformat = %(ctime), %(addr): %(method) %(uri) -> %(msecs)ms (%(status))
+pidfile = /tmp/activities.pid
