--- a/config/nginx.bak.conf
+++ b/config/nginx.bak.conf
@@ -118,20 +118,25 @@ server {
 	access_log	off;
 	error_log 	/home/projects/boxdichdurchdeinstudium/logs/nginx_error.log;
 
+	location / {
+		include		/etc/nginx/uwsgi_params;
+		uwsgi_pass	boxdichdurchdeinstudium;
+	}
+	
+	location /static/ {
+		alias /home/projects/boxdichdurchdeinstudium/static/;
+	}
+	
+	location /media/ {
+		alias /home/projects/boxdichdurchdeinstudium/media/;
+	}
     ssl_certificate /etc/letsencrypt/live/boxdichdurchdeinstudium.de/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/boxdichdurchdeinstudium.de/privkey.pem; # managed by Certbot
 
 
-    if ($host = www.boxdichdurchdeinstudium.de) {
-        return 301 https://boxdichdurchdeinstudium.shop$request_uri;
-    } # managed by Certbot
-	if ($host = boxdichdurchdeinstudium.de) {
-        return 301 https://boxdichdurchdeinstudium.shop$request_uri;
-    } # managed by Certbot
 
 
 
-	return 301 https://boxdichdurchdeinstudium.shop$request_uri;
 
 
 
@@ -143,16 +148,16 @@ server {
 
 server {
     if ($host = www.boxdichdurchdeinstudium.de) {
-        return 301 https://boxdichdurchdeinstudium.shop$request_uri;
+        return 301 https://$host$request_uri;
     } # managed by Certbot
 	if ($host = boxdichdurchdeinstudium.de) {
-        return 301 https://boxdichdurchdeinstudium.shop$request_uri;
+        return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
 	listen 80;
 	server_name boxdichdurchdeinstudium.de www.boxdichdurchdeinstudium.de;
-	return 301 https://boxdichdurchdeinstudium.shop$request_uri;
+	return 301 https://$host$request_uri;
 
 }
 
