Updated nginx config

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -10,6 +10,10 @@ upstream watchadoing {
   server unix:/tmp/watchadoing.sock;
 }
 
+upstream mycharacter_api {
+  server unix:/tmp/mycharacter_api.sock;
+}
+
 upstream daphne {
 	server unix:/tmp/daphne.sock;
 }
@@ -18,8 +22,27 @@ upstream daphne2 {
   server unix:/tmp/daphne2.sock;
 }
 
+upstream daphne3 {
+  server unix:/tmp/daphne3.sock;
+}
+
 
 server {
+    if ($host = yourcharacter.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = watchadoing.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = www.yourcharacter.net) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
     if ($host = www.watchadoing.net) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
@@ -44,15 +67,10 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-    if ($host = watchadoing.net) {
-      return 301 https://$host$request_uri;
-    }
 
 	listen 80;
-	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net watchadoing.net www.watchadoing.net;
+	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net watchadoing.net www.watchadoing.net yourcharacter.net www.yourcharacter.net;
 	return 301 https://$host$request_uri;
-
-
 
 
 
@@ -65,6 +83,56 @@ server {
 
 server {
   listen 443 ssl;
+  server_name www.yourcharacter.net yourcharacter.net;
+
+  access_log /home/projects/mycharacter/logs/nginx_access.log;
+  error_log /home/projects/mycharacter/logs/nginx_error_frontend.log;
+
+  location / {
+    alias /home/projects/mycharacter/mycharacter-app/dist/;
+    try_files $uri $uri/ /index.html;
+  }
+    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
+
+
+
+
+
+
+
+}
+
+server {
+  listen 8000 ssl;
+  server_name www.yourcharacter.net yourcharacter.net;
+
+  access_log off;
+  error_log /home/projects/mycharacter/logs/nginx_error_backend.log;
+	client_max_body_size	20M;
+
+  location / {
+    include /etc/nginx/uwsgi_params;
+    uwsgi_pass mycharacter_api;
+  }
+
+  location /media/ {
+    alias /home/projects/mycharacter/mycharacter-api/media/;
+  }
+
+  location /ws/ {
+		proxy_http_version 	1.1;
+		proxy_set_header	Upgrade $http_upgrade;
+		proxy_set_header	Connection "upgrade";
+		proxy_redirect		off;
+		proxy_pass		http://daphne3;
+	}
+    ssl_certificate /etc/letsencrypt/live/yourcharacter.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/yourcharacter.net/privkey.pem; # managed by Certbot
+}
+
+server {
+  listen 443 ssl;
   server_name www.watchadoing.net watchadoing.net;
 
   access_log /home/projects/watchadoing/api/logs/nginx_access_log.log;
@@ -73,10 +141,10 @@ server {
   location / {
     alias /home/projects/watchadoing/app/dist/;
   }
+    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
 
-	
-    ssl_certificate /etc/letsencrypt/live/boxdichdurchdeinstudium.de/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/boxdichdurchdeinstudium.de/privkey.pem; # managed by Certbot
+
 
 
 
@@ -103,9 +171,9 @@ server {
 		proxy_redirect		off;
 		proxy_pass		http://daphne2;
 	}
-    ssl_certificate /etc/letsencrypt/live/boxdichdurchdeinstudium.de/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/boxdichdurchdeinstudium.de/privkey.pem; # managed by Certbot
 
+  ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
 
 
 
@@ -117,9 +185,8 @@ server {
 
 	access_log	off;
 	error_log 	/home/projects/boxdichdurchdeinstudium/logs/nginx_error.log;
-
-    ssl_certificate /etc/letsencrypt/live/boxdichdurchdeinstudium.de/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/boxdichdurchdeinstudium.de/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/boxdichdurchdeinstudium.de-0001/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/boxdichdurchdeinstudium.de-0001/privkey.pem; # managed by Certbot
 
 
     if ($host = www.boxdichdurchdeinstudium.de) {
@@ -132,6 +199,12 @@ server {
 
 
 	return 301 https://boxdichdurchdeinstudium.shop$request_uri;
+
+
+
+
+
+
 
 
 
@@ -185,8 +258,28 @@ server {
 		proxy_redirect		off;
 		proxy_pass		http://daphne;
 	}
-    ssl_certificate /etc/letsencrypt/live/boxdichdurchdeinstudium.de/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/boxdichdurchdeinstudium.de/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
