--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,86 @@
-#apps: redis, postgresql, libpq-dev
-django
-daphne
-uwsgi
-channels
-channels-redis
-redis
-django-extensions
-django-parler
-easy-thumbnails
-geopy
-psycopg2
-python-magic
-django-cookie-law
-numpy
-django-glrm
-Markdown
-python-redis-lock[django]
-argon2-cffi
-Pillow
-celery[redis]
-django-celery-beat
-#cookielaw: change path in templatetag at source
-#turnserver, download wget http://turnserver.open-sys.org/downloads/v4.5.2/turnserver-4.5.2.tar.gz, apt-get install libssl-dev libevent-dev libhiredis-dev make -y, make, make install, run turnserver, see https://stackoverflow.com/questions/31161864/how-to-create-stun-turn-server-instance-using-aws-ec2/32113146#32113146
+aioredis==1.3.1
+amqp==5.0.6
+argon2-cffi==20.1.0
+asgiref==3.3.1
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==20.3.0
+autobahn==21.3.1
+Automat==20.2.0
+billiard==3.6.4.0
+braintree==4.13.1
+celery==5.0.5
+certifi==2021.10.8
+cffi==1.14.5
+channels==3.0.3
+channels-redis==3.2.0
+charset-normalizer==2.0.9
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+constantly==15.1.0
+cryptography==3.4.7
+cycler==0.10.0
+daphne==3.0.1
+Django==3.1.7
+django-celery-beat==2.2.0
+django-classy-tags==2.0.0
+django-cookie-law==2.0.5
+django-extensions==3.1.1
+django-glrm==1.1.3
+django-parler==2.2
+django-paypal==2.0
+django-redis==4.12.1
+django-timezone-field==4.1.2
+easy-thumbnails==2.7.1
+geographiclib==1.50
+geopy==2.1.0
+hiredis==2.0.0
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==3.10.0
+incremental==21.3.0
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.3.1
+kombu==5.0.2
+Markdown==3.3.4
+matplotlib==3.4.2
+msgpack==1.0.2
+numpy==1.20.2
+Pillow==8.2.0
+prompt-toolkit==3.0.18
+psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pycrypto==2.6.1
+PyGObject==3.26.1
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pytest-runner==5.3.0
+python-apt==1.6.5+ubuntu0.7
+python-crontab==2.5.1
+python-dateutil==2.8.1
+python-magic==0.4.22
+python-redis-lock==3.7.0
+pytz==2021.1
+pyxdg==0.25
+redis==3.5.3
+requests==2.26.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+six==1.16.0
+sqlparse==0.4.1
+Twisted==21.2.0
+txaio==21.2.1
+typing-extensions==3.7.4.3
+unattended-upgrades==0.1
+urllib3==1.26.7
+uWSGI==2.0.19.1
+uwsgitop==0.11
+vine==5.0.0
+wcwidth==0.2.5
+zipp==3.4.1
+zope.interface==5.3.0
