--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,23 @@
-#apps: redis, postgresql, libpq-dev
-django
-daphne
-uwsgi
-channels
-channels-redis
-redis
-django-extensions
-django-parler
-easy-thumbnails
-geopy
-psycopg2
-python-magic
-django-cookie-law
+#apps: redis, postgresql, libpq-dev, libjpeg-dev
+argon2-cffi==20.1.0
+channels==3.0.3
+channels-redis==3.2.0
+daphne==3.0.2
+django>=3,<4
+django-celery-beat==2.2.0
+django-cookie-law==2.0.5
+django-extensions==3.1.1
+django-glrm==1.1.3
+django-parler==2.2
+easy-thumbnails==2.7.1
+geopy==2.1.0
+Markdown==3.3.4
 numpy
-django-glrm
-Markdown
-python-redis-lock[django]
-argon2-cffi
-Pillow
-celery[redis]
-django-celery-beat
+Pillow==8.2.0
+psycopg2==2.8.6
+python-magic==0.4.22
+python-redis-lock==3.7.0
+redis==3.5.3
+uwsgi==2.0.23
 #cookielaw: change path in templatetag at source
 #turnserver, download wget http://turnserver.open-sys.org/downloads/v4.5.2/turnserver-4.5.2.tar.gz, apt-get install libssl-dev libevent-dev libhiredis-dev make -y, make, make install, run turnserver, see https://stackoverflow.com/questions/31161864/how-to-create-stun-turn-server-instance-using-aws-ec2/32113146#32113146
