--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
 projectname = activities
-base = /home/projects/activities
+base = /home/websites/activities
 
 master = true
-pythonpath = /usr/bin/python3
+pythonpath = %(base)/env/bin/python3
 chdir =  %(base)
 env = DJANGO_SETTINGS_MODULE=%(projectname).settings.pro
 module = %(projectname).wsgi:application
@@ -11,7 +11,7 @@ socket = /tmp/%(projectname).sock
 chmod-socket = 666
 enable-threads = true
 single-interpreter = true
-processes = 8
+processes = 1
 threads = 2
 harakiri = 30
 uid = not_root
