--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,6 @@
+events {}
+
+http {
 upstream activities {
 	server	unix:/tmp/activities.sock;
 }
@@ -77,114 +80,114 @@ server {
 
 }
 
-server {
-  listen 443 ssl;
-  server_name www.yourcharacter.net yourcharacter.net;
-
-  access_log /home/projects/mycharacter/logs/nginx_access.log;
-  error_log /home/projects/mycharacter/logs/nginx_error_frontend.log;
-
-  location / {
-    alias /home/projects/mycharacter/mycharacter-app/dist/;
-    try_files $uri $uri/ /index.html;
-  }
-    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
-
-
-
-
-
-
-
-
-
-}
-
-server {
-  listen 8000 ssl;
-  server_name www.yourcharacter.net yourcharacter.net;
-
-  access_log off;
-  error_log /home/projects/mycharacter/logs/nginx_error_backend.log;
-	client_max_body_size	20M;
-
-  location / {
-    include /etc/nginx/uwsgi_params;
-    uwsgi_pass mycharacter_api;
-  }
-
-  location /media/ {
-    alias /home/projects/mycharacter/mycharacter-api/media/;
-  }
-
-  location /ws/ {
-		proxy_http_version 	1.1;
-		proxy_set_header	Upgrade $http_upgrade;
-		proxy_set_header	Connection "upgrade";
-		proxy_redirect		off;
-		proxy_pass		http://daphne3;
-	}
-    ssl_certificate /etc/letsencrypt/live/yourcharacter.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/yourcharacter.net/privkey.pem; # managed by Certbot
-}
-
-server {
-  listen 443 ssl;
-  server_name www.watchadoing.net watchadoing.net;
-
-  access_log /home/projects/watchadoing/api/logs/nginx_access_log.log;
-  error_log /home/projects/watchadoing/api/logs/nginx_error_frontend.log;
-	
-  location / {
-    alias /home/projects/watchadoing/app/dist/;
-  }
-    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
-
-
-
-
-
-
-
-
-
-
-}
-
-server {
-  listen 8000 ssl;
-  server_name www.watchadoing.net watchadoing.net;
-  access_log off;
-  error_log /home/projects/watchadoing/api/logs/nginx_error_backend.log;
-
-  location / {
-    include /etc/nginx/uwsgi_params;
-    uwsgi_pass watchadoing;
-  }
-
-	location /ws/ {
-		proxy_http_version 	1.1;
-		proxy_set_header	Upgrade $http_upgrade;
-		proxy_set_header	Connection "upgrade";
-		proxy_redirect		off;
-		proxy_pass		http://daphne2;
-	}
-
-  ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-  ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
-
-
-
-}
+#server {
+#  listen 443 ssl;
+#  server_name www.yourcharacter.net yourcharacter.net;
+#
+#  access_log /home/projects/mycharacter/logs/nginx_access.log;
+#  error_log /home/projects/mycharacter/logs/nginx_error_frontend.log;
+#
+#  location / {
+#    alias /home/projects/mycharacter/mycharacter-app/dist/;
+#    try_files $uri $uri/ /index.html;
+#  }
+#    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+#    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#}
+#
+#server {
+#  listen 8000 ssl;
+#  server_name www.yourcharacter.net yourcharacter.net;
+#
+#  access_log off;
+#  error_log /home/projects/mycharacter/logs/nginx_error_backend.log;
+#	client_max_body_size	20M;
+#
+#  location / {
+#    include /etc/nginx/uwsgi_params;
+#    uwsgi_pass mycharacter_api;
+#  }
+#
+#  location /media/ {
+#    alias /home/projects/mycharacter/mycharacter-api/media/;
+#  }
+#
+#  location /ws/ {
+#		proxy_http_version 	1.1;
+#		proxy_set_header	Upgrade $http_upgrade;
+#		proxy_set_header	Connection "upgrade";
+#		proxy_redirect		off;
+#		proxy_pass		http://daphne3;
+#	}
+#    ssl_certificate /etc/letsencrypt/live/yourcharacter.net/fullchain.pem; # managed by Certbot
+#    ssl_certificate_key /etc/letsencrypt/live/yourcharacter.net/privkey.pem; # managed by Certbot
+#}
+#
+#server {
+#  listen 443 ssl;
+#  server_name www.watchadoing.net watchadoing.net;
+#
+#  access_log /home/projects/watchadoing/api/logs/nginx_access_log.log;
+#  error_log /home/projects/watchadoing/api/logs/nginx_error_frontend.log;
+#	
+#  location / {
+#    alias /home/projects/watchadoing/app/dist/;
+#  }
+#    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+#    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#}
+#
+#server {
+#  listen 8000 ssl;
+#  server_name www.watchadoing.net watchadoing.net;
+#  access_log off;
+#  error_log /home/projects/watchadoing/api/logs/nginx_error_backend.log;
+#
+#  location / {
+#    include /etc/nginx/uwsgi_params;
+#    uwsgi_pass watchadoing;
+#  }
+#
+#	location /ws/ {
+#		proxy_http_version 	1.1;
+#		proxy_set_header	Upgrade $http_upgrade;
+#		proxy_set_header	Connection "upgrade";
+#		proxy_redirect		off;
+#		proxy_pass		http://daphne2;
+#	}
+#
+#  ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
+#  ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
+#
+#
+#
+#}
 
 server {
 	listen 443 ssl;
 	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net;
 
 	access_log	off;
-	error_log 	/home/projects/activities/logs/nginx_error.log;
+	error_log 	/home/websites/activities/logs/nginx_error.log;
 	
 	client_max_body_size	30M;
 
@@ -194,11 +197,11 @@ server {
 	}
 	
 	location /static/ {
-		alias /home/projects/activities/static/;
+		alias /home/websites/activities/static/;
 	}
 	
 	location /media/ {
-		alias /home/projects/activities/media/;
+		alias /home/websites/activities/media/;
 	}
 	
 	location /ws/ {
@@ -208,8 +211,15 @@ server {
 		proxy_redirect		off;
 		proxy_pass		http://daphne;
 	}
-    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
+
+  ssl_certificate /etc/letsencrypt/live/www.myactivities.net/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/www.myactivities.net/privkey.pem;
+
+
+  types {
+    text/css    css;
+    # Add other MIME types as needed
+}
 
 
 
@@ -256,6 +266,5 @@ server {
 
 
 
-
-
+}
 }
