Updated nginx config for other websites

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 
 http {
+  include /etc/nginx/mime.types;
 upstream activities {
 	server	unix:/tmp/activities.sock;
 }
@@ -27,22 +28,12 @@ upstream daphne3 {
 
 
 server {
-    if ($host = yourcharacter.net) {
+    if ($host = yourcharacter.myactivities.net) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
-    if ($host = watchadoing.net) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    if ($host = www.yourcharacter.net) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-
-    if ($host = www.watchadoing.net) {
+    if ($host = watchadoing.myactivities.net) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
@@ -68,119 +59,91 @@ server {
 
 
 	listen 80;
-	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net watchadoing.net www.watchadoing.net yourcharacter.net www.yourcharacter.net;
+	server_name myactivities.net www.myactivities.net de.myactivities.net en.myactivities.net watchadoing.myactivities.net yourcharacter.myactivities.net;
 	return 301 https://$host$request_uri;
+}
 
+server {
+  listen 443 ssl;
+  server_name yourcharacter.myactivities.net;
 
+  access_log /home/websites/mycharacter/logs/nginx_access.log;
+  error_log /home/websites/mycharacter/logs/nginx_error_frontend.log;
 
+  location / {
+    alias /home/websites/mycharacter/mycharacter-app/dist/;
+    try_files $uri $uri/ /index.html;
+  }
+    ssl_certificate /etc/letsencrypt/live/yourcharacter.myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/yourcharacter.myactivities.net/privkey.pem; # managed by Certbot
+}
 
+server {
+  listen 8000 ssl;
+  server_name yourcharacter.myactivities.net;
 
+  access_log off;
+  error_log /home/websites/mycharacter/logs/nginx_error_backend.log;
+	client_max_body_size	20M;
 
+  location / {
+    include /etc/nginx/uwsgi_params;
+    uwsgi_pass mycharacter_api;
+  }
+
+  location /media/ {
+    alias /home/websites/mycharacter/mycharacter-api/media/;
+  }
+
+  location /ws/ {
+		proxy_http_version 	1.1;
+		proxy_set_header	Upgrade $http_upgrade;
+		proxy_set_header	Connection "upgrade";
+		proxy_redirect		off;
+		proxy_pass		http://daphne3;
+	}
+    ssl_certificate /etc/letsencrypt/live/yourcharacter.myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/yourcharacter.myactivities.net/privkey.pem; # managed by Certbot
+}
+
+server {
+  listen 443 ssl;
+  server_name watchadoing.myactivities.net;
+
+  access_log /home/websites/watchadoing/api/logs/nginx_access_log.log;
+  error_log /home/websites/watchadoing/api/logs/nginx_error_frontend.log;
+	
+  location / {
+    alias /home/websites/watchadoing/app/dist/;
+  }
+    ssl_certificate /etc/letsencrypt/live/watchadoing.myactivities.net/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/watchadoing.myactivities.net/privkey.pem; # managed by Certbot
+}
+
+server {
+  listen 8000 ssl;
+  server_name watchadoing.myactivities.net;
+  access_log off;
+  error_log /home/websites/watchadoing/api/logs/nginx_error_backend.log;
+
+  location / {
+    include /etc/nginx/uwsgi_params;
+    uwsgi_pass watchadoing;
+  }
+
+	location /ws/ {
+		proxy_http_version 	1.1;
+		proxy_set_header	Upgrade $http_upgrade;
+		proxy_set_header	Connection "upgrade";
+		proxy_redirect		off;
+		proxy_pass		http://daphne2;
+	}
+
+  ssl_certificate /etc/letsencrypt/live/watchadoing.myactivities.net/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/watchadoing.myactivities.net/privkey.pem;
 
 
 }
-
-#server {
-#  listen 443 ssl;
-#  server_name www.yourcharacter.net yourcharacter.net;
-#
-#  access_log /home/projects/mycharacter/logs/nginx_access.log;
-#  error_log /home/projects/mycharacter/logs/nginx_error_frontend.log;
-#
-#  location / {
-#    alias /home/projects/mycharacter/mycharacter-app/dist/;
-#    try_files $uri $uri/ /index.html;
-#  }
-#    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-#    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#}
-#
-#server {
-#  listen 8000 ssl;
-#  server_name www.yourcharacter.net yourcharacter.net;
-#
-#  access_log off;
-#  error_log /home/projects/mycharacter/logs/nginx_error_backend.log;
-#	client_max_body_size	20M;
-#
-#  location / {
-#    include /etc/nginx/uwsgi_params;
-#    uwsgi_pass mycharacter_api;
-#  }
-#
-#  location /media/ {
-#    alias /home/projects/mycharacter/mycharacter-api/media/;
-#  }
-#
-#  location /ws/ {
-#		proxy_http_version 	1.1;
-#		proxy_set_header	Upgrade $http_upgrade;
-#		proxy_set_header	Connection "upgrade";
-#		proxy_redirect		off;
-#		proxy_pass		http://daphne3;
-#	}
-#    ssl_certificate /etc/letsencrypt/live/yourcharacter.net/fullchain.pem; # managed by Certbot
-#    ssl_certificate_key /etc/letsencrypt/live/yourcharacter.net/privkey.pem; # managed by Certbot
-#}
-#
-#server {
-#  listen 443 ssl;
-#  server_name www.watchadoing.net watchadoing.net;
-#
-#  access_log /home/projects/watchadoing/api/logs/nginx_access_log.log;
-#  error_log /home/projects/watchadoing/api/logs/nginx_error_frontend.log;
-#	
-#  location / {
-#    alias /home/projects/watchadoing/app/dist/;
-#  }
-#    ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-#    ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#}
-#
-#server {
-#  listen 8000 ssl;
-#  server_name www.watchadoing.net watchadoing.net;
-#  access_log off;
-#  error_log /home/projects/watchadoing/api/logs/nginx_error_backend.log;
-#
-#  location / {
-#    include /etc/nginx/uwsgi_params;
-#    uwsgi_pass watchadoing;
-#  }
-#
-#	location /ws/ {
-#		proxy_http_version 	1.1;
-#		proxy_set_header	Upgrade $http_upgrade;
-#		proxy_set_header	Connection "upgrade";
-#		proxy_redirect		off;
-#		proxy_pass		http://daphne2;
-#	}
-#
-#  ssl_certificate /etc/letsencrypt/live/www.watchadoing.net/fullchain.pem; # managed by Certbot
-#  ssl_certificate_key /etc/letsencrypt/live/www.watchadoing.net/privkey.pem; # managed by Certbot
-#
-#
-#
-#}
 
 server {
 	listen 443 ssl;
@@ -221,50 +184,5 @@ server {
     # Add other MIME types as needed
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }
-}
+} #http
